--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost/blog_pessoal?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
+spring.datasource.url=jdbc:mysql://localhost/Project_beelearn?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=root
 spring.jpa.show-sql=true
